--- a/ME4429 Assignment 1.ipynb
+++ b/ME4429 Assignment 1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "114a12a8",
+   "id": "6994a8ea",
    "metadata": {},
    "source": [
     "## ME4429 Assignment 1 - Thermo Review"
@@ -11,7 +11,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "5167009e",
+   "id": "62646ed5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +34,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "233ce7db",
+   "id": "7a92c890",
    "metadata": {},
    "outputs": [
     {
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "04e23c1e",
+   "id": "3e551f89",
    "metadata": {},
    "source": [
     "## Part 1a"
@@ -94,7 +94,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "150bc526",
+   "id": "7b834384",
    "metadata": {},
    "outputs": [
     {
@@ -119,8 +119,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
-   "id": "9c35e776",
+   "execution_count": 45,
+   "id": "ea86cfa3",
    "metadata": {},
    "outputs": [
     {
@@ -146,14 +146,14 @@
       "\n",
       "mdot_5: 0.223 kg/s\n",
       "h_5: 64.915 kJ/kg\n",
-      "Td_5: 28.879 C\n"
+      "Td_5: 28.879 C\n",
+      "\n"
      ]
     }
    ],
    "source": [
     "# referencing diagram for states\n",
     "mdot_exaust = 0.1\n",
-    "\n",
     "\n",
     "# 1 (from house)\n",
     "Td_1 = Td_in\n",
@@ -193,18 +193,75 @@
     "\n",
     "# for temp, take temp fraction from each inlet\n",
     "Td_5 = ((mdot_3 / mdot_5) * Td_3) + ((mdot_4 / mdot_5) * Td_4)\n",
-    "print(f\"\\nmdot_5: {round(mdot_5,3)} kg/s\\nh_5: {round(h_5,3)} kJ/kg\\nTd_5: {round(Td_5,3)} C\")\n",
+    "print(f\"\\nmdot_5: {round(mdot_5,3)} kg/s\\nh_5: {round(h_5,3)} kJ/kg\\nTd_5: {round(Td_5,3)} C\\n\")\n",
     "\n",
-    "# 6 (into house)\n"
+    "# 6 (into house), from phychromatic chart, moving RH to 100 as coils cool air\n",
+    "hum_6 = 1\n",
+    "h_6 = 19.0 # kJ/kg dry air, specific enthalpy \n",
+    "w_6 = 6 # g/kg dry air, specific humidity\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bb2e9237",
+   "metadata": {},
+   "source": [
+    "## Part 1b"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "id": "ab585d99",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Cooling Capacity: 10.235 kW, 34925 BTU/hr, or 2.91 tons of refridgeration.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Heat in\n",
+    "solar_heat_gain = 24000 # watts, power\n",
+    "people_and_appliances = 900 # watts, power\n",
+    "Q_in = solar_heat_gain + people_and_appliances\n",
+    "\n",
+    "Q_c = mdot_5 * (h_5 - h_6)\n",
+    "Q_h = mdot_1 * (h_1 - h_6)\n",
+    "#Q_envelope = ( - Q_in)\n",
+    "\n",
+    "Q_c_btuhr = Q_c * 3412.14245\n",
+    "Q_c_tonsref = Q_c / 3.517\n",
+    "\n",
+    "print(f\"Cooling Capacity: {round(Q_c, 3)} kW, {round(Q_c_btuhr)} BTU/hr, or {round(Q_c_tonsref,3)} tons of refridgeration.\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c23c660d",
+   "metadata": {},
+   "source": [
+    "## Part 1c"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7d131aa2",
+   "id": "3d98ec96",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Given a realistic change in enthalpy from 40 -> 240 kJ/kg (see attached PV diagram for R134a), \n",
+    "# we can calculate the mass flow rate of the refrigerant within the heat exchanger.\n",
+    "\n",
+    "h_refrigerant_0 = 40 # kJ/kg, enthalpy\n",
+    "h_refrigerant_1 = 240 #kJ/kg, enthalpy\n",
+    "\n",
+    "mdot_refrigerant = mdot_"
+   ]
   }
  ],
  "metadata": {
