final final updates

--- a/ME4429 Assignment 1.ipynb
+++ b/ME4429 Assignment 1.ipynb
@@ -2,10 +2,21 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "eeea01e7",
+   "id": "317bfa1a",
    "metadata": {},
    "source": [
     "# ME4429 Assignment 1 - Solar panels and summer nights"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "23e8a8ee",
+   "metadata": {},
+   "source": [
+    "Peter Murray</br>\n",
+    "Professor Levey</br>\n",
+    "ME4429 Thermofluid Application and Design</br>\n",
+    "9/1/2022"
    ]
   },
   {
@@ -15,7 +26,7 @@
     }
    },
    "cell_type": "markdown",
-   "id": "d6a47667",
+   "id": "4638e48d",
    "metadata": {},
    "source": [
     "![Psychrometric%20chart%20for%20HVAC%20HW.png](attachment:Psychrometric%20chart%20for%20HVAC%20HW.png)"
@@ -23,7 +34,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8ff5c4ff",
+   "id": "3a48f26d",
    "metadata": {},
    "source": [
     "Environmental properties (from given values & psychrometric chart):"
@@ -32,7 +43,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "942c0dd8",
+   "id": "19974c1d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,7 +64,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f284826e",
+   "id": "1d94f3b6",
    "metadata": {},
    "source": [
     "Given Building Properties:"
@@ -62,7 +73,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "17fd8133",
+   "id": "05cda1c2",
    "metadata": {},
    "outputs": [
     {
@@ -112,7 +123,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dd79a870",
+   "id": "cb17e7c0",
    "metadata": {},
    "source": [
     "The calculated airflow (0.225 cfm/sqft) is below the recommended values (between 0.7 - 1.1), but the airflow can easily be changed by increasing our ceiling height. For a  room height of 9 ft, the amount of 'air changes an hour' is fairly low."
@@ -120,7 +131,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9b257b00",
+   "id": "488078bd",
    "metadata": {},
    "source": [
     "## Part 1a"
@@ -129,7 +140,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "97e24519",
+   "id": "c0c6f290",
    "metadata": {},
    "outputs": [
     {
@@ -154,7 +165,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7f8e34cf",
+   "id": "e612daec",
    "metadata": {},
    "source": [
     ">* Mass flow rate: 0.223, kg/s\n",
@@ -167,7 +178,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "a2d4e063",
+   "id": "cc20f1c6",
    "metadata": {},
    "outputs": [
     {
@@ -250,7 +261,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b07690e1",
+   "id": "60cd6c00",
    "metadata": {},
    "source": [
     "## Part 1b"
@@ -259,7 +270,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "80a7aeaf",
+   "id": "1b2255ff",
    "metadata": {},
    "outputs": [
     {
@@ -288,7 +299,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e3bc3f5e",
+   "id": "287c451d",
    "metadata": {},
    "source": [
     "> Cooling Capacity: 10.235 kW, 34,925 BTU/hr, or 2.91 tons of refrigeration."
@@ -296,7 +307,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4b43b1b2",
+   "id": "b7e83c67",
    "metadata": {},
    "source": [
     "## Part 1c"
@@ -304,7 +315,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f235b40b",
+   "id": "0dce5127",
    "metadata": {},
    "source": [
     "Given a realistic change in enthalpy from 40 -> 240 kJ/kg (see attached PV diagram for R134a below), we can calculate the mass flow rate of the refrigerant within the heat exchanger."
@@ -313,7 +324,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "9d44e81a",
+   "id": "51dfba8c",
    "metadata": {},
    "outputs": [
     {
@@ -335,7 +346,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1017e9c9",
+   "id": "9bb6fdf3",
    "metadata": {},
    "source": [
     "> The mass flow rate of the refrigerant (R134a) is $0.051 \\frac{kg}{s}$."
@@ -348,7 +359,7 @@
     }
    },
    "cell_type": "markdown",
-   "id": "29d47498",
+   "id": "adad5638",
    "metadata": {},
    "source": [
     "![IMG_3527.jpg](attachment:IMG_3527.jpg)"
@@ -356,7 +367,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "03f2b34b",
+   "id": "ea5ee1e8",
    "metadata": {},
    "source": [
     "## Part 1d"
@@ -364,7 +375,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4e137540",
+   "id": "f17e9042",
    "metadata": {},
    "source": [
     "The coefficient of performance (COP) is  $COP = \\frac{Q_{cold}}{W} $"
@@ -372,7 +383,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c98c672c",
+   "id": "ca4228a4",
    "metadata": {},
    "source": [
     "Where $W = Q_{hot} + Q_{cold} $"
@@ -381,7 +392,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "3e694dbb",
+   "id": "60e7c6c2",
    "metadata": {},
    "outputs": [
     {
@@ -399,7 +410,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a41aa16f",
+   "id": "7e62c131",
    "metadata": {},
    "source": [
     "> The coefficient of performance (COP) is 70.7%"
@@ -407,7 +418,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "487e61a7",
+   "id": "6847414c",
    "metadata": {},
    "source": [
     "## Part 2a"
@@ -415,7 +426,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "67370daf",
+   "id": "715d1cea",
    "metadata": {},
    "source": [
     "> According to http://www.solarelectricityhandbook.com/solar-irradiance.html, for Shrewsbury, MA, The best panel angle in the summer is 63 degrees."
@@ -428,7 +439,7 @@
     }
    },
    "cell_type": "markdown",
-   "id": "0468f413",
+   "id": "8f8d1e50",
    "metadata": {},
    "source": [
     "![best_summer_performance.png](attachment:best_summer_performance.png)"
@@ -436,7 +447,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "462b0944",
+   "id": "d7378634",
    "metadata": {},
    "source": [
     "## Part 2b"
@@ -444,7 +455,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8fe987c1",
+   "id": "a61ab65a",
    "metadata": {},
    "source": [
     ">According to http://www.solarelectricityhandbook.com/solar-irradiance.html, for Shrewsbury, MA, the average solar insolation per day on a horizontal surface in July is $5.61 \\frac{kWh}{m^2}$ per day."
@@ -452,7 +463,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cf53aa07",
+   "id": "66b38c6e",
    "metadata": {},
    "source": [
     "## Part 2c"
@@ -465,7 +476,7 @@
     }
    },
    "cell_type": "markdown",
-   "id": "5b8d455f",
+   "id": "bf8aefaf",
    "metadata": {},
    "source": [
     "![shrewsbury_july_day_lengths.png](attachment:shrewsbury_july_day_lengths.png)"
@@ -473,7 +484,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "69539128",
+   "id": "f819e2c6",
    "metadata": {},
    "source": [
     "source: https://www.timeanddate.com/sun/@4950909"
@@ -482,7 +493,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "bc1695b2",
+   "id": "02737052",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -495,7 +506,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e02dd70b",
+   "id": "a3e4cda1",
    "metadata": {},
    "source": [
     "Assuming a 15 hour 'day' and a 9 hour 'night' for Shewsbury, MA, we can calculate the total power draw for a full 24 hour cycle."
@@ -504,7 +515,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "5aee2962",
+   "id": "b3184b87",
    "metadata": {},
    "outputs": [
     {
@@ -526,7 +537,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cabd96ba",
+   "id": "e4660719",
    "metadata": {},
    "source": [
     ">We would require $223.6$ kWh per day."
@@ -534,7 +545,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "977e9510",
+   "id": "7d420640",
    "metadata": {},
    "source": [
     "## Part 2d"
@@ -542,7 +553,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5c0d94df",
+   "id": "901c1d9c",
    "metadata": {},
    "source": [
     "We need to collect 223.6 kWh during the daylight hours, of which we have 15."
@@ -550,7 +561,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "37c462f3",
+   "id": "04d5b6c4",
    "metadata": {},
    "source": [
     "$\\frac{223.6 kW}{24 hr} = \\frac{x}{15 hr}$"
@@ -559,7 +570,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "d3214424",
+   "id": "adf1e150",
    "metadata": {},
    "outputs": [
     {
@@ -577,7 +588,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e8602138",
+   "id": "a9ad8463",
    "metadata": {},
    "source": [
     "> We need to collect an average of $139.7$ kW during the daylight hours."
@@ -585,7 +596,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "669c8588",
+   "id": "60660c9a",
    "metadata": {},
    "source": [
     "## Part 2e"
@@ -594,7 +605,7 @@
   {
    "cell_type": "code",
    "execution_count": 41,
-   "id": "a6ca8ef0",
+   "id": "f4f4d76b",
    "metadata": {},
    "outputs": [
     {
@@ -622,7 +633,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "332b0773",
+   "id": "e72a06be",
    "metadata": {},
    "source": [
     "> It would require $346.55 m^2$ of PV panels to satisfy the energy demand."
@@ -630,7 +641,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "feee5efa",
+   "id": "947c2511",
    "metadata": {},
    "source": [
     "## Part 2f"
@@ -639,7 +650,7 @@
   {
    "cell_type": "code",
    "execution_count": 52,
-   "id": "f52bdc82",
+   "id": "f4a5dff7",
    "metadata": {},
    "outputs": [
     {
@@ -665,7 +676,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "aced43be",
+   "id": "d0286b82",
    "metadata": {},
    "source": [
     "> It would require 104 panels to satisfy the power demand."
@@ -673,7 +684,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5729b727",
+   "id": "fc3258d9",
    "metadata": {},
    "source": [
     "## Part 2g"
@@ -682,7 +693,7 @@
   {
    "cell_type": "code",
    "execution_count": 58,
-   "id": "1e4f097f",
+   "id": "4166b183",
    "metadata": {},
    "outputs": [
     {
@@ -703,7 +714,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "07776a82",
+   "id": "5f29b796",
    "metadata": {},
    "source": [
     "> It would require an upfront cost of $401,000."
@@ -711,7 +722,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8db89a76",
+   "id": "fd023198",
    "metadata": {},
    "source": [
     "## Part 2h"
@@ -720,7 +731,7 @@
   {
    "cell_type": "code",
    "execution_count": 65,
-   "id": "246f4e8f",
+   "id": "1e27a19b",
    "metadata": {},
    "outputs": [
     {
@@ -743,7 +754,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "deeb4a8a",
+   "id": "0f6fa15f",
    "metadata": {},
    "source": [
     "> It would cost $33.33 a day."
@@ -751,7 +762,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bcdb8e18",
+   "id": "9383ea7a",
    "metadata": {},
    "source": [
     "## Part 3"
@@ -759,7 +770,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4acd290e",
+   "id": "6bf04dbd",
    "metadata": {},
    "source": [
     "$kWh = \\frac{Ah*V}{1000}$"
@@ -768,7 +779,7 @@
   {
    "cell_type": "code",
    "execution_count": 140,
-   "id": "325a4aa0",
+   "id": "c23e7564",
    "metadata": {},
    "outputs": [
     {
@@ -892,7 +903,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c37caa9b",
+   "id": "3bc677af",
    "metadata": {},
    "source": [
     "> The best choice would be battery # 1, as it costs \\\\$11,000 for 22 batteries in series.\n",
