--- a/Assignment 2.ipynb
+++ b/Assignment 2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "64ffa19e",
    "metadata": {},
    "outputs": [],
@@ -19,23 +19,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 7,
    "id": "c65e1900",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "With 100 ft of pipe in 2 ft increments, we have 50 total pipe union joints.\n"
+     ]
+    }
+   ],
    "source": [
     "total_pipe_len = 100 # ft\n",
-    "pipe_section_len = 2 #ft\n",
+    "pipe_section_len = 2 # ft\n",
     "num_pipe_unions = math.ceil(total_pipe_len / pipe_section_len)\n",
     "num_90_fittings = 2\n",
     "v_water = 6.15 # m/s\n",
     "\n",
-    "hl_major = 192.15 # m"
+    "hl_major = 192.15 # m\n",
+    "\n",
+    "print(f\"With {total_pipe_len} ft of pipe in {pipe_section_len} ft increments, we have {num_pipe_unions} total pipe union joints.\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 4,
    "id": "9a96229a",
    "metadata": {},
    "outputs": [],
@@ -59,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 16,
    "id": "93dc921a",
    "metadata": {},
    "outputs": [
@@ -67,23 +77,54 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "222.73605229591837\n",
-      "30.58605229591837\n",
-      "15.850000000000001\n"
+      "Total head loss: 222.736 m\n",
+      "Minor head loss: 30.586 m\n",
+      "Major head loss: 192.15 m\n"
      ]
     }
    ],
    "source": [
     "hl_total = hl_major + hl_minor\n",
-    "print(hl_total)\n",
-    "print(hl_minor)\n",
-    "print(k_total)"
+    "\n",
+    "print(f\"Total head loss: {round(hl_total,3)} m\\nMinor head loss: {round(hl_minor,3)} m\\nMajor head loss: {round(hl_major, 3)} m\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "5290b0a5",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "222.736"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "round(hl_total,3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "79e4e6f4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "required_inlet_pressure = 60 # psig\n",
+    "well_depth = 50 # ft\n"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -97,7 +138,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
