--- a/Assignment 3 (2).ipynb
+++ b/Assignment 3 (2).ipynb
@@ -10,10 +10,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6a216254",
+   "id": "9b706cf2",
    "metadata": {},
    "source": [
-    "Peter Murray, Jacob Abrogar, Erin Lee, Jose Rivera</br>\n",
+    "#Peter Murray, Jacob Abrogar, Erin Lee, Jose Rivera</br>\n",
     "Professor Levey</br>\n",
     "ME4429 Thermofluid Application and Design</br>\n",
     "9/18/2022"
@@ -41,7 +41,7 @@
     "    Number of plates: 8\n",
     "    Gap width: 7 mm\n",
     "    Plate dimensions: 10x15 mm\n",
-    "    Plate material: Aluminum\n",
+    "    Plate material: Copper (!)\n",
     "    Pressing Pattern: 45 deg chevron\n",
     "    Port Diameter: .23 mm\n",
     "#### Flow rates:\n",
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 16,
    "id": "396fa8f0",
    "metadata": {
     "scrolled": true
@@ -73,7 +73,7 @@
      "text": [
       "Volumetric flow rate: (water) 4.0745732638888884e-05 m3/s\n",
       "Mass flow rate: (water) 0.040795138888888895 kg/s\n",
-      "Heat: 0.008820292502083337 J\n"
+      "Heat: 8820.292502083337 W\n"
      ]
     }
    ],
@@ -97,13 +97,13 @@
     "print(f'Mass flow rate: (water) {mdot_water} kg/s')\n",
     "\n",
     "Qdot_water_kW = mdot_water * c_water * (T_water_out - T_water_in)\n",
-    "Qdot_water = Qdot_water_kW / 1000\n",
-    "print(f'Heat: {Qdot_water} J')"
+    "Qdot_water = Qdot_water_kW * 1000\n",
+    "print(f'Heat: {Qdot_water} W')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 20,
    "id": "f22ad1aa",
    "metadata": {},
    "outputs": [
@@ -111,15 +111,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Mass flow rate (glycol): 0.00033628016707016423 kg/s\n",
-      "Volumetric flow rate (glycol): 0.00033628016707016423 m3/s\n"
+      "Mass flow rate (glycol): 60.018321326097826 kg/s\n",
+      "Volumetric flow rate (glycol): 60.018321326097826 m3/s\n"
      ]
     }
    ],
    "source": [
     "T_glycol_in = 70 # temp, C\n",
-    "T_glycol_out = 63 # temp, C (GUESS)\n",
-    "c_glycol = 3.747 # specific heat, kJ/kgC\n",
+    "T_glycol_out = 30 # temp, C (!) (63 -> 30)\n",
+    "c_glycol = 3.674 # specific heat at 30C, kJ/kgC (!) \n",
     "rho_glycol = 1000 # density, kg/m3\n",
     "\n",
     "meu_water = 0.000732 # dynamic viscosity @ 34.15C Pa*s\n",
@@ -140,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 21,
    "id": "efda5f6e",
    "metadata": {},
    "outputs": [
@@ -148,8 +148,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Log mean temp: 26.305280115751426 C \n",
-      "A: 0.167652511 m2\n"
+      "Log mean temp: 15.102090761789544 C \n",
+      "A: 0.292022232 m2\n"
      ]
     }
    ],
@@ -171,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 26,
    "id": "81aa33c8",
    "metadata": {},
    "outputs": [
@@ -179,16 +179,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Np: 7.76169030133109 (number of plates)\n",
-      "Number of plates required: 8\n",
-      "V: 0.363801184 m/s\n",
-      "Effective diamter: 0.00023333333333333333 m\n"
+      "Np: 13.519547774458719 (number of plates)\n",
+      "Number of plates required: 14\n",
+      "V: 0.020788639 m/s\n",
+      "Effective diameter: 0.0023333 m\n"
      ]
     }
    ],
    "source": [
     "phi = 1.2 # Area correction factor (1.15-1.25)\n",
-    "b = 0.00014 # Gap width, m\n",
+    "b = 0.0014 # Gap width, m (!)\n",
     "Wp = .1 # Width of plate, m (GUESS)\n",
     "L = .18 # height of plate, m (GUESS)\n",
     "\n",
@@ -203,12 +203,12 @@
     "\n",
     "V = Q_water_m3s / (Np * Ac)\n",
     "print(f'V: {round(V,9)} m/s')\n",
-    "print(f'Effective diamter: {De} m')"
+    "print(f'Effective diameter: {round(De,7)} m')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 28,
    "id": "f7ad5416",
    "metadata": {},
    "outputs": [
@@ -216,10 +216,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Reynolds number (water): 115.61787181515317\n",
+      "Reynolds number (water): 66.06735532294466\n",
       "Prandtl number (water): 4.9295072463768115\n",
-      "Nusselt number (water): 13.929748812100133\n",
-      "Concection heat transfer coefficient (water): 205560.52435980958 W/m2K\n"
+      "Nusselt number (water): 9.611895904527119\n",
+      "Convection heat transfer coefficient (water): 2558.137438590574 W/m2K\n"
      ]
     }
    ],
@@ -238,13 +238,13 @@
     "Nu_water = Ch * (Re_water)**n * Pr_water**(.4) * (meu_water / meu_w_water)**(0.17)\n",
     "print(f'Nusselt number (water): {Nu_water}')\n",
     "\n",
-    "h_water = (Nu * K_water) / De \n",
-    "print(f'Concection heat transfer coefficient (water): {h_water} W/m2K')"
+    "h_water = (Nu_water * K_water) / De \n",
+    "print(f'Convection heat transfer coefficient (water): {h_water} W/m2K')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 29,
    "id": "8d836e58",
    "metadata": {
     "scrolled": false
@@ -254,10 +254,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Reynolds number (glycol): 115.96576912252073\n",
-      "Prandtl number (glycol): 253.4202898550725\n",
-      "Nusselt number (glycol): 77.23691199778138\n",
-      "Concection heat transfer coefficient (glycol): 205560.52435980958 W/m2K\n"
+      "Reynolds number (glycol): 66.26615378429756\n",
+      "Prandtl number (glycol): 248.48309178743966\n",
+      "Nusselt number (glycol): 52.98187373951444\n",
+      "Concection heat transfer coefficient (glycol): 14100.747253816486 W/m2K\n"
      ]
     }
    ],
@@ -276,7 +276,7 @@
     "Nu_glycol = Ch * (Re_glycol)**n * Pr_glycol**(.3) * (meu_glycol / meu_w_glycol)**(0.17)\n",
     "print(f'Nusselt number (glycol): {Nu_glycol}')\n",
     "\n",
-    "h_glycol = (Nu * K_water) / De \n",
+    "h_glycol = (Nu_glycol * K_water) / De \n",
     "print(f'Concection heat transfer coefficient (glycol): {h_glycol} W/m2K')"
    ]
   },
@@ -290,24 +290,24 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "U: 1701.6225375526067\n"
+      "U: 993.73 W/m2K\n"
      ]
     }
    ],
    "source": [
     "Tp = .007 # plate thickness, m\n",
-    "K_plate = 237 # Aluminum W/mK\n",
+    "K_plate = 385 # Copper W/mK (not aluminum, that's toxic) (!)\n",
     "Rf_water = 0.0001763 # Fouling Factor, m2K/W\n",
     "Rf_glycol = 0.00035\n",
     "\n",
     "U_calculated = 1 / ((1/h_glycol) + (Tp/K_plate) + (1/h_water) + Rf_water + Rf_glycol)\n",
     "\n",
-    "print(f'U: {U_calculated}')"
+    "print(f'U: {round(U_calculated,3)} W/m2K')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 42,
    "id": "324d00a1",
    "metadata": {},
    "outputs": [
@@ -315,8 +315,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2.166410880077357\n",
-      "110263.03124905739\n"
+      "2.431121511457382\n",
+      "deltaP water: 40.40356327913974 Pa\n"
      ]
     }
    ],
@@ -324,7 +324,7 @@
     "# Pressure through the channels\n",
     "\n",
     "m = 0.206 # for 45deg chevron table\n",
-    "Kp = 1.441 \n",
+    "Kp = 1.441 # constant from 45deg chevron table\n",
     "\n",
     "#for water\n",
     "\n",
@@ -332,12 +332,12 @@
     "print(f_water)\n",
     "\n",
     "deltaP_water = f_water * (L/De) * ((rho_water * V**2) / 2)\n",
-    "print(deltaP_water)"
+    "print(f'deltaP water: {deltaP_water} Pa')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 43,
    "id": "887ced1c",
    "metadata": {},
    "outputs": [
@@ -345,8 +345,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2.1650704407260877\n",
-      "110594.81569614583\n"
+      "2.4296172857485643\n",
+      "40.52513869522542\n"
      ]
     }
    ],
@@ -362,7 +362,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 44,
    "id": "a3395905",
    "metadata": {},
    "outputs": [
@@ -370,8 +370,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.0011278399999999997\n",
-      "4.11903873266857\n"
+      "0.019737199999999996\n",
+      "0.4119038732668569\n"
      ]
     }
    ],
@@ -393,7 +393,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 45,
    "id": "2e17b99e",
    "metadata": {},
    "outputs": [
@@ -401,7 +401,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "4.11903873266857\n"
+      "0.4119038732668569\n"
      ]
     }
    ],
@@ -424,7 +424,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 46,
    "id": "7b4629c0",
    "metadata": {},
    "outputs": [
@@ -432,7 +432,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Power required for water: 5.990554432637964 W\n"
+      "Power required for water: 0.0022174081494977477 W\n"
      ]
     }
    ],
@@ -451,7 +451,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 47,
    "id": "f271314f",
    "metadata": {},
    "outputs": [
@@ -459,7 +459,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Power required for glycol: 6.008578828471371 W\n"
+      "Power required for glycol: 0.002223945922063094 W\n"
      ]
     }
    ],
@@ -488,7 +488,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -502,7 +502,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
