--- a/Project - assignment 3 copy.ipynb
+++ b/Project - assignment 3 copy.ipynb
@@ -20,7 +20,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "da40360e",
    "metadata": {},
@@ -55,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 3,
    "id": "396fa8f0",
    "metadata": {
     "scrolled": true
@@ -97,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 4,
    "id": "f22ad1aa",
    "metadata": {},
    "outputs": [
@@ -134,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 5,
    "id": "efda5f6e",
    "metadata": {},
    "outputs": [
@@ -165,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 6,
    "id": "81aa33c8",
    "metadata": {},
    "outputs": [
@@ -202,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 7,
    "id": "f7ad5416",
    "metadata": {},
    "outputs": [
@@ -212,8 +211,8 @@
      "text": [
       "Reynolds number (water): 298.36870145845984\n",
       "Prandtl number (water): 4.9295072463768115\n",
-      "Nusselt number (water): 16.807713736422738\n",
-      "Convection heat transfer coefficient (water): 4817.349337070086 W/m2K\n"
+      "Nusselt number (water): 26.116750698658425\n",
+      "Convection heat transfer coefficient (water): 7485.462546400099 W/m2K\n"
      ]
     }
    ],
@@ -223,11 +222,9 @@
     "print(f'Reynolds number (water): {Re_water}')\n",
     "\n",
     "# From chevron angles, choose 45deg\n",
-    "#Ch = .3\n",
-    "#n = .663\n",
-    "# From chevron angles, choose 50deg\n",
-    "Ch = .291\n",
-    "n = .591\n",
+    "Ch = .3\n",
+    "n = .663\n",
+    "\n",
     "\n",
     "Pr_water = ((c_water*1000) * meu_water) / K_water\n",
     "print(f'Prandtl number (water): {Pr_water}')\n",
@@ -241,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 8,
    "id": "8d836e58",
    "metadata": {
     "scrolled": false
@@ -253,8 +250,8 @@
      "text": [
       "Reynolds number (glycol): 299.26650096134387\n",
       "Prandtl number (glycol): 248.48309178743966\n",
-      "Nusselt number (glycol): 92.62600830358737\n",
-      "Concection heat transfer coefficient (glycol): 26548.038995320505 W/m2K\n"
+      "Nusselt number (glycol): 143.95852823905204\n",
+      "Concection heat transfer coefficient (glycol): 41260.728939900604 W/m2K\n"
      ]
     }
    ],
@@ -264,11 +261,8 @@
     "print(f'Reynolds number (glycol): {Re_glycol}')\n",
     "\n",
     "# From chevron angles, choose 45deg\n",
-    "#Ch = .3\n",
-    "#n = .663\n",
-    "# From chevron angles, choose 50deg\n",
-    "Ch = .291\n",
-    "n = .591\n",
+    "Ch = .3\n",
+    "n = .663\n",
     "\n",
     "Pr_glycol = ((c_glycol*1000) * meu_glycol) / K_water\n",
     "print(f'Prandtl number (glycol): {Pr_glycol}')\n",
@@ -282,7 +276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 9,
    "id": "0046bd2d",
    "metadata": {},
    "outputs": [
@@ -290,7 +284,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "U: 1274.636 W/m2K\n"
+      "U: 1434.483 W/m2K\n"
      ]
     }
    ],
@@ -307,7 +301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 10,
    "id": "324d00a1",
    "metadata": {},
    "outputs": [
@@ -337,7 +331,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 11,
    "id": "887ced1c",
    "metadata": {},
    "outputs": [
@@ -362,7 +356,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 12,
    "id": "a3395905",
    "metadata": {},
    "outputs": [
@@ -393,7 +387,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 13,
    "id": "2e17b99e",
    "metadata": {},
    "outputs": [
@@ -424,7 +418,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 14,
    "id": "7b4629c0",
    "metadata": {},
    "outputs": [
@@ -432,7 +426,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Power required for water: 0.00042032077512101795 W\n"
+      "Power required for water: 0.10283960001103752 W\n"
      ]
     }
    ],
@@ -451,7 +445,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 17,
    "id": "f271314f",
    "metadata": {},
    "outputs": [
@@ -459,7 +453,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Power required for glycol: 0.00042152956143243556 W\n"
+      "Power required for glycol: 0.10314901707450659 W\n"
      ]
     }
    ],
@@ -484,19 +478,11 @@
     "    Power required for water: 5.99 W\n",
     "    Power required for glycol: 6.01 W"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "4bdb8c36",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -510,7 +496,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.10.7"
   }
  },
  "nbformat": 4,
