--- a/Project - assignment 3 copy.ipynb
+++ b/Project - assignment 3 copy.ipynb
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 26,
    "id": "396fa8f0",
    "metadata": {
     "scrolled": true
@@ -74,29 +74,30 @@
     "# start with water\n",
     "waterusage = 100 # gal/day (hot water)\n",
     "\n",
-    "c_water = 4.182 # specific heat, kJ/kgC\n",
+    "c_celcius_water = 4.182 # specific heat, kJ/kgC\n",
+    "c_kelvin_water = 0.0152 # KJ/KgK\n",
     "rho_water = 997 # density, kg/m3\n",
     "\n",
     "T_water_in = 8.3 # temp, c (groundwater, from assig.3)\n",
     "T_water_out = 60 # temp, c (project requirements)\n",
     "\n",
     "Q_water_galhr = waterusage/4 # gal/hr (volumetric flowrate)\n",
-    "Q_water_m3hr = Q_water_galhr * 0.00378541\n",
+    "Q_water_m3hr = Q_water_galhr * 0.00378541 # this number is the conversion to m^3\n",
     "Q_water_m3s = Q_water_m3hr / (60 * 60)\n",
     "print(f'Volumetric flow rate: (water) {Q_water_m3s} m3/s')\n",
     "\n",
-    "mdot_water_kghr = Q_water_galhr * 3.79 # kg/hr\n",
+    "mdot_water_kghr = Q_water_galhr * 3.79 # kg/hr this number is the conversion to kg\n",
     "mdot_water = mdot_water_kghr / (60 * 60) # kg/s\n",
     "print(f'Mass flow rate: (water) {mdot_water} kg/s')\n",
     "\n",
-    "Qdot_water_kW = mdot_water * c_water * (T_water_out - T_water_in)\n",
+    "Qdot_water_kW = mdot_water * c_celcius_water * (T_water_out - T_water_in)\n",
     "Qdot_water = Qdot_water_kW * 1000\n",
     "print(f'Heat: {Qdot_water} W')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 27,
    "id": "f22ad1aa",
    "metadata": {},
    "outputs": [
@@ -104,15 +105,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Mass flow rate (glycol): 38.72149762974052 kg/s\n",
-      "Volumetric flow rate (glycol): 38.72149762974052 m3/s\n"
+      "Mass flow rate (glycol): 0.03872 kg/s\n",
+      "Volumetric flow rate (glycol): 3.87215e-05 m3/s\n"
      ]
     }
    ],
    "source": [
     "T_glycol_in = 70 # temp, C (from Flat Plate Solar)\n",
     "T_glycol_out = 30 # temp, C (from assignment 3)\n",
-    "c_glycol = 3.674 # specific heat at 30C, kJ/kgC (!) \n",
+    "c_celcius_glycol = 3.674 # specific heat at 30C, kJ/kgC (!)\n",
+    "c_kelvin_glycol = 0.0134 #kJ/kgC\n",
     "rho_glycol = 1000 # density, kg/m3\n",
     "\n",
     "meu_water = 0.000732 # dynamic viscosity @ 34.15C Pa*s\n",
@@ -125,15 +127,18 @@
     "\n",
     "Qdot_glycol_kW = Qdot_water\n",
     "\n",
-    "mdot_glycol = (Qdot_glycol_kW) / (c_glycol * (T_glycol_in - T_glycol_out)) \n",
-    "Q_glycol = mdot_glycol * rho_glycol # volumetric flow rate, m3/s\n",
-    "print(f'Mass flow rate (glycol): {mdot_glycol} kg/s')\n",
-    "print(f'Volumetric flow rate (glycol): {mdot_glycol} m3/s')"
+    "\n",
+    "#print(Qdot_glycol_kW)\n",
+    "\n",
+    "mdot_glycol = ((Qdot_glycol_kW) / (c_celcius_glycol * (T_glycol_in - T_glycol_out)) )/1000\n",
+    "Q_glycol = mdot_glycol / rho_glycol # volumetric flow rate, m3/s\n",
+    "print(f'Mass flow rate (glycol): {round(mdot_glycol,5)} kg/s')\n",
+    "print(f'Volumetric flow rate (glycol): {round(Q_glycol,10)} m3/s')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 28,
    "id": "efda5f6e",
    "metadata": {},
    "outputs": [
@@ -164,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 29,
    "id": "81aa33c8",
    "metadata": {},
    "outputs": [
@@ -201,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 30,
    "id": "f7ad5416",
    "metadata": {},
    "outputs": [
@@ -210,9 +215,9 @@
      "output_type": "stream",
      "text": [
       "Reynolds number (water): 298.36870145845984\n",
-      "Prandtl number (water): 4.9295072463768115\n",
-      "Nusselt number (water): 26.116750698658425\n",
-      "Convection heat transfer coefficient (water): 7485.462546400099 W/m2K\n"
+      "Prandtl number (water): 0.017916908212560385\n",
+      "Nusselt number (water): 2.7612324414988\n",
+      "Convection heat transfer coefficient (water): 791.4116982326561 W/m2K\n"
      ]
     }
    ],
@@ -226,7 +231,7 @@
     "n = .663\n",
     "\n",
     "\n",
-    "Pr_water = ((c_water*1000) * meu_water) / K_water\n",
+    "Pr_water = ((c_kelvin_water*1000) * meu_water) / K_water\n",
     "print(f'Prandtl number (water): {Pr_water}')\n",
     "\n",
     "Nu_water = Ch * (Re_water)**n * Pr_water**(.4) * (meu_water / meu_w_water)**(0.17)\n",
@@ -238,7 +243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 31,
    "id": "8d836e58",
    "metadata": {
     "scrolled": false
@@ -249,9 +254,9 @@
      "output_type": "stream",
      "text": [
       "Reynolds number (glycol): 299.26650096134387\n",
-      "Prandtl number (glycol): 248.48309178743966\n",
-      "Nusselt number (glycol): 143.95852823905204\n",
-      "Concection heat transfer coefficient (glycol): 41260.728939900604 W/m2K\n"
+      "Prandtl number (glycol): 0.9062801932367152\n",
+      "Nusselt number (glycol): 26.71942401499687\n",
+      "Concection heat transfer coefficient (glycol): 7658.1979907598725 W/m2K\n"
      ]
     }
    ],
@@ -264,7 +269,7 @@
     "Ch = .3\n",
     "n = .663\n",
     "\n",
-    "Pr_glycol = ((c_glycol*1000) * meu_glycol) / K_water\n",
+    "Pr_glycol = ((c_kelvin_glycol*1000) * meu_glycol) / K_water\n",
     "print(f'Prandtl number (glycol): {Pr_glycol}')\n",
     "\n",
     "Nu_glycol = Ch * (Re_glycol)**n * Pr_glycol**(.3) * (meu_glycol / meu_w_glycol)**(0.17)\n",
@@ -276,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 32,
    "id": "0046bd2d",
    "metadata": {},
    "outputs": [
@@ -284,7 +289,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "U: 1434.483 W/m2K\n"
+      "U: 517.215 W/m2K\n"
      ]
     }
    ],
@@ -301,7 +306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 33,
    "id": "324d00a1",
    "metadata": {},
    "outputs": [
@@ -331,7 +336,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 34,
    "id": "887ced1c",
    "metadata": {},
    "outputs": [
@@ -356,7 +361,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 35,
    "id": "a3395905",
    "metadata": {},
    "outputs": [
@@ -387,7 +392,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 36,
    "id": "2e17b99e",
    "metadata": {},
    "outputs": [
@@ -418,7 +423,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 37,
    "id": "7b4629c0",
    "metadata": {},
    "outputs": [
@@ -445,7 +450,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 38,
    "id": "f271314f",
    "metadata": {},
    "outputs": [
