Update Project - ducting.ipynb

--- a/Project - ducting.ipynb
+++ b/Project - ducting.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 88,
    "id": "82e19cc2",
    "metadata": {},
    "outputs": [
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 89,
    "id": "57f39d84",
    "metadata": {},
    "outputs": [
@@ -67,8 +67,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
-   "id": "4f2d2eaa",
+   "execution_count": 90,
+   "id": "b5e0c8e6",
    "metadata": {},
    "outputs": [
     {
@@ -93,26 +93,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
-   "id": "22e0411f",
+   "execution_count": 92,
+   "id": "d5680d0c",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Pressure drop: 2081.057 Pa\n",
-      "Pressure drop: 0.212 meters of water\n",
-      "Pressure drop: 8.358 inches of water\n",
+      "Pressure drop: 846.296 Pa\n",
+      "Pressure drop: 0.086 meters of water\n",
+      "Pressure drop: 3.399 inches of water\n",
       "\n",
-      "11.143562032919663\n"
+      "4.531715226720664\n"
      ]
     }
    ],
    "source": [
     "# Let's calculate pressure drop:\n",
     "\n",
-    "L = 150 # length of our ducts\n",
+    "L = 61 # length of our ducts (m)\n",
     "\n",
     "deltaP = f * ((L)/(D)) * ((rho * V**2)/(2))\n",
     "\n",
@@ -131,7 +131,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3310704c",
+   "id": "db1f0281",
    "metadata": {},
    "outputs": [],
    "source": []
